--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -31,15 +31,15 @@
 					<div class="panel-body">
 						<div class="row">
 							<div class="col-lg-12">
-								<form id="login-form" action="loginServlet" method="post"
+								<form id="login-form" action="LogIn" method="post"
 									role="form" style="display: block;">
 									<div class="form-group">
 										<input type="text" name="email" id="email" tabindex="1"
-											class="form-control" placeholder="E-mail" value="">
+											class="form-control" placeholder="E-mail" required>
 									</div>
 									<div class="form-group">
 										<input type="password" name="password" id="password"
-											tabindex="2" class="form-control" placeholder="Password">
+											tabindex="2" class="form-control" placeholder="Password" required>
 									</div>
 									<div class="form-group">
 										<div class="row">
@@ -54,17 +54,21 @@
 								<form id="register-form" method="post" role="form"
 									style="display: none;">
 									<div class="form-group">
+										<input type="email" name="username" id="username" tabindex="1"
+											class="form-control" placeholder="Username" required>
+									</div>
+									<div class="form-group">
 										<input type="email" name="email" id="email" tabindex="1"
-											class="form-control" placeholder="Email Address" value="">
+											class="form-control" placeholder="Email Address" required>
 									</div>
 									<div class="form-group">
 										<input type="password" name="password" id="password"
-											tabindex="2" class="form-control" placeholder="Password">
+											tabindex="2" class="form-control" placeholder="Password" required>
 									</div>
 									<div class="form-group">
 										<input type="password" name="confirm-password"
 											id="confirm-password" tabindex="2" class="form-control"
-											placeholder="Confirm Password">
+											placeholder="Confirm Password" required>
 									</div>
 									<div class="form-group">
 										<div class="row">
@@ -93,6 +97,7 @@
 
 	<!-- js -->
 	<script src="resources/js/login.js"></script>
+	<script src="resources/js/ajax.js"></script>
 	<script src="resources/user/js/user.js"></script>
 
 </body>
