--- a/WebContent/resources/wi/index.html
+++ b/WebContent/resources/wi/index.html
@@ -1,25 +1,41 @@
 <form id="newWIForm">
 	<div class="form-group">
-		<label for="selectUser">Email address</label>
+		<input type="hidden" id="id">
+		<label for="selectUser">User</label>
 		<div id="selectUsers"></div>
 	</div>
 	<div class="form-group">
-		<label for="exampleInputPassword1">Password</label> <input
-			type="password" class="form-control" id="exampleInputPassword1"
-			placeholder="Password">
+		<label for="wiName">Name</label> <input type="text"
+			class="form-control" id="wiName" placeholder="Work item name" required>
 	</div>
 	<div class="form-group">
-		<label for="exampleInputFile">File input</label> <input type="file"
-			id="exampleInputFile">
-		<p class="help-block">Example block-level help text here.</p>
+		<label for="eEffort">Estimated effort</label> <input type="time"
+			class="form-control" id="eEffort" placeholder="In hours" required>
 	</div>
-	<div class="checkbox">
-		<label> <input type="checkbox"> Check me out
-		</label>
+	<div class="form-group">
+		<label for="wiDesc">Description</label>
+		<textarea class="form-control" rows="3" id="wiDesc"></textarea>
+	</div>
+	<div class="form-group">
+		<label for="wiStatus">Status</label> <select id="wiStatus"
+			class="form-control">
+			<option value='0'>To do</option>
+			<option value='1'>In progress</option>
+			<option value='2'>Done</option>
+			<option value='3'>Sttoped</option>
+		</select>
+	</div>
+	<div class="form-group">
+		<label for="effort">Effort</label> <input type="time"
+			class="form-control" id="effort" placeholder="In hours">
+	</div>
+	<div class="form-group">
+		<label for="dPercentage">Deviation</label> <input type="time"
+			class="form-control" id="dPercentage" placeholder="In hours">
 	</div>
 	<div class="modal-footer">
 		<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-		<button type="button" class="btn btn-primary" data-dismiss="modal">Save</button>
+		<button type="button" class="btn btn-primary">Save</button>
 	</div>
 </form>
 <script src="wi/js/wi.js"></script>
