--- a/WebContent/resources/wilog/index.html
+++ b/WebContent/resources/wilog/index.html
@@ -3,14 +3,9 @@
 		<thead>
 			<tr>
 				<th>#</th>
-				<th>User</th>
-				<th>Name</th>
-				<th>Estimated effort</th>
-				<th>Description</th>
-				<th>Status</th>
-				<th>Effort</th>
-				<th>Deviation</th>
-				<th>More</th>
+				<th>Work item name</th>
+				<th>Changed date</th>
+				<th>Status changed to</th>
 			</tr>
 		</thead>
 	</table>
