--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,104 +1,94 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<title>Tasks</title>
+    <meta charset="UTF-8">
+    <title>Tasks</title>
 
-<!-- Bootstrap Core CSS -->
-<link href="resources/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap Core CSS -->
+    <link href="resources/css/bootstrap.min.css" rel="stylesheet">
 
-<!-- CSS -->
-<link href="resources/css/login.css" rel="stylesheet">
+    <!-- CSS -->
+    <link href="resources/css/login.css" rel="stylesheet">
 
 </head>
+
 <body>
-	<!-- Form init -->
-	<div class="container">
-		<div class="row">
-			<div class="col-md-6 col-md-offset-3">
-				<div class="panel panel-login">
-					<div class="panel-heading">
-						<div class="row">
-							<div class="col-xs-6">
-								<a href="#" class="active" id="login-form-link">Login</a>
-							</div>
-							<div class="col-xs-6">
-								<a href="#" id="register-form-link">Register</a>
-							</div>
-						</div>
-						<hr>
-					</div>
-					<div class="panel-body">
-						<div class="row">
-							<div class="col-lg-12">
-								<form id="login-form" action="LogIn" method="post"
-									role="form" style="display: block;">
-									<div class="form-group">
-										<input type="text" name="email" id="email" tabindex="1"
-											class="form-control" placeholder="E-mail" required>
-									</div>
-									<div class="form-group">
-										<input type="password" name="password" id="password"
-											tabindex="2" class="form-control" placeholder="Password" required>
-									</div>
-									<div class="form-group">
-										<div class="row">
-											<div class="col-sm-6 col-sm-offset-3">
-												<input type="submit" name="login-submit" id="login-submit"
-													tabindex="4" class="form-control btn btn-login"
-													value="Log In">
-											</div>
-										</div>
-									</div>
-								</form>
-								<form id="register-form" method="post" role="form"
-									style="display: none;">
-									<div class="form-group">
-										<input type="email" name="username" id="username" tabindex="1"
-											class="form-control" placeholder="Username" required>
-									</div>
-									<div class="form-group">
-										<input type="email" name="email" id="email" tabindex="1"
-											class="form-control" placeholder="Email Address" required>
-									</div>
-									<div class="form-group">
-										<input type="password" name="password" id="password"
-											tabindex="2" class="form-control" placeholder="Password" required>
-									</div>
-									<div class="form-group">
-										<input type="password" name="confirm-password"
-											id="confirm-password" tabindex="2" class="form-control"
-											placeholder="Confirm Password" required>
-									</div>
-									<div class="form-group">
-										<div class="row">
-											<div class="col-sm-6 col-sm-offset-3">
-												<input type="button" name="register-submit"
-													id="register-submit" tabindex="4"
-													class="form-control btn btn-register" value="Register Now">
-											</div>
-										</div>
-									</div>
-								</form>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- Form end -->
-	
-	<!-- jQuery -->
-	<script src="resources/js/jquery.js"></script>
+    <!-- Form init -->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                <div class="panel panel-login">
+                    <div class="panel-heading">
+                        <div class="row">
+                            <div class="col-xs-6">
+                                <a href="#" class="active" id="login-form-link">Login</a>
+                            </div>
+                            <div class="col-xs-6">
+                                <a href="#" id="register-form-link">Register</a>
+                            </div>
+                        </div>
+                        <hr>
+                    </div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <form id="login-form" action="LogIn" method="post" role="form" style="display: block;">
+                                    <div class="form-group">
+                                        <input type="text" name="email" id="email" tabindex="1" class="form-control" placeholder="E-mail" required>
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="password" name="password" id="password" tabindex="2" class="form-control" placeholder="Password" required>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="row">
+                                            <div class="col-sm-6 col-sm-offset-3">
+                                                <input type="submit" name="login-submit" id="login-submit" tabindex="4" class="form-control btn btn-login" value="Log In">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
+                                <form id="register-form" method="post" role="form" style="display: none;">
+                                    <div class="form-group">
+                                        <input type="email" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" required maxlength="45">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="email" name="email" id="email" tabindex="1" class="form-control" placeholder="Email Address" required maxlength="45">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="password" name="password" id="password" tabindex="2" class="form-control" placeholder="Password" required maxlength="10">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="password" name="confirm-password" id="confirm-password" tabindex="2" class="form-control" placeholder="Confirm Password" required maxlength="10">
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="row">
+                                            <div class="col-sm-6 col-sm-offset-3">
+                                                <input type="button" name="register-submit" id="register-submit" tabindex="4" class="form-control btn btn-register" value="Register Now">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Form end -->
 
-	<!-- Bootstrap Core JavaScript -->
-	<script src="resources/js/bootstrap.min.js"></script>
+    <!-- jQuery -->
+    <script src="resources/js/jquery.js"></script>
 
-	<!-- js -->
-	<script src="resources/js/login.js"></script>
-	<script src="resources/js/ajax.js"></script>
-	<script src="resources/user/js/user.js"></script>
+    <!-- Bootstrap Core JavaScript -->
+    <script src="resources/js/bootstrap.min.js"></script>
+
+    <!-- js -->
+    <script src="resources/js/login.js"></script>
+    <script src="resources/js/ajax.js"></script>
+    <script src="resources/user/js/user.js"></script>
 
 </body>
+
 </html>
