--- a/WebContent/resources/wi/index.html
+++ b/WebContent/resources/wi/index.html
@@ -1,41 +1,36 @@
 <form id="newWIForm">
-	<div class="form-group">
-		<input type="hidden" id="id">
-		<label for="selectUser">User</label>
-		<div id="selectUsers"></div>
-	</div>
-	<div class="form-group">
-		<label for="wiName">Name</label> <input type="text"
-			class="form-control" id="wiName" placeholder="Work item name" required>
-	</div>
-	<div class="form-group">
-		<label for="eEffort">Estimated effort</label> <input type="time"
-			class="form-control" id="eEffort" placeholder="In hours" required>
-	</div>
-	<div class="form-group">
-		<label for="wiDesc">Description</label>
-		<textarea class="form-control" rows="3" id="wiDesc"></textarea>
-	</div>
-	<div class="form-group">
-		<label for="wiStatus">Status</label> <select id="wiStatus"
-			class="form-control">
+    <div class="form-group">
+        <input type="hidden" id="id">
+        <label for="selectUser">User</label>
+        <div id="selectUsers"></div>
+    </div>
+    <div class="form-group">
+        <label for="wiName">Name</label> <input type="text" class="form-control" id="wiName" placeholder="Work item name" required maxlength="45">
+    </div>
+    <div class="form-group">
+        <label for="eEffort">Estimated effort</label> <input type="time" class="form-control" id="eEffort" placeholder="In hours" required>
+    </div>
+    <div class="form-group">
+        <label for="wiDesc">Description</label>
+        <textarea class="form-control" rows="3" id="wiDesc"></textarea>
+    </div>
+    <div class="form-group">
+        <label for="wiStatus">Status</label> <select id="wiStatus" class="form-control">
 			<option value='0'>To do</option>
 			<option value='1'>In progress</option>
 			<option value='2'>Done</option>
-			<option value='3'>Sttoped</option>
+			<option value='3'>Stopped</option>
 		</select>
-	</div>
-	<div class="form-group">
-		<label for="effort">Effort</label> <input type="time"
-			class="form-control" id="effort" placeholder="In hours">
-	</div>
-	<div class="form-group">
-		<label for="dPercentage">Deviation</label> <input type="time"
-			class="form-control" id="dPercentage" placeholder="In hours">
-	</div>
-	<div class="modal-footer">
-		<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-		<button type="button" class="btn btn-primary">Save</button>
-	</div>
+    </div>
+    <div class="form-group">
+        <label for="effort">Effort</label> <input type="time" class="form-control" id="effort" placeholder="In hours" disabled="disabled">
+    </div>
+    <div class="form-group">
+        <label for="dPercentage">Deviation</label> <input type="time" class="form-control" id="dPercentage" placeholder="In hours" disabled="disabled">
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save</button>
+    </div>
 </form>
 <script src="wi/js/wi.js"></script>
