--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -6,10 +6,11 @@
     <title>Tasks</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="resources/css/bootstrap.min.css" rel="stylesheet">
+    <link href="login/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- CSS -->
-    <link href="resources/css/login.css" rel="stylesheet">
+    <link href="login/css/login.css" rel="stylesheet">
+    <link href="login/css/toastr.min.css" rel="stylesheet">
 
 </head>
 
@@ -79,15 +80,15 @@
     <!-- Form end -->
 
     <!-- jQuery -->
-    <script src="resources/js/jquery.js"></script>
+    <script src="login/js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="resources/js/bootstrap.min.js"></script>
+    <script src="login/js/bootstrap.min.js"></script>
 
     <!-- js -->
-    <script src="resources/js/login.js"></script>
-    <script src="resources/js/ajax.js"></script>
-    <script src="resources/user/js/user.js"></script>
+    <script src="login/js/ajax.js"></script>
+    <script src="login/js/login.js"></script>
+    <script src="login/js/toastr.min.js"></script>
 
 </body>
 
