--- a/WebContent/resources/index.html
+++ b/WebContent/resources/index.html
@@ -12,12 +12,13 @@
     <title>Task</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../login/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/sb-admin.css" rel="stylesheet">
     <link href="css/dataTables.min.css" rel="stylesheet">
     <link href="css/index.css" rel="stylesheet">
+    <link href="../login/css/toastr.min.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -119,7 +120,7 @@
     <!-- /#wrapper -->
 
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+    <script src="../login/js/jquery.js"></script>
 
     <!-- DataTable -->
     <script src="js/dataTables.min.js"></script>
@@ -128,11 +129,12 @@
 
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../login/js/bootstrap.min.js"></script>
 
     <!-- Page js -->
-    <script src="js/ajax.js"></script>
+    <script src="../login/js/ajax.js"></script>
     <script src="js/index.js"></script>
+    <script src="../login/js/toastr.min.js"></script>
 
     <!-- Modal -->
     <div class="modal fade" id="Modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -142,7 +144,7 @@
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
-                    <h4 class="modal-title">Modal title</h4>
+                    <h4 class="modal-title"></h4>
                 </div>
                 <div class="modal-body"></div>
             </div>
