--- a/WebContent/resources/index.html
+++ b/WebContent/resources/index.html
@@ -84,9 +84,16 @@
                     <div class="col-lg-12">
                         <div id="pageContainer">
                             <h1 class="page-header">
-								Work Itens <small><button type="button"
+								Work Itens 
+								<small><button type="button"
 										data-toggle='modal' data-target='#Modal'
 										class="btn btn-primary" id="newWI">New</button></small>
+								<select id="wiFilter" class="form-control">
+									<option value="33">To do</option>
+									<option value="1">In progress</option>
+									<option value="2">Done</option>
+									<option value="3">Stopped</option>
+								</select>
 							</h1>
                             <div class="table-responsive">
                                 <table id="dataTable" class="display table">
