--- a/WebContent/resources/wi/index.html
+++ b/WebContent/resources/wi/index.html
@@ -15,7 +15,8 @@
         <textarea class="form-control" rows="3" id="wiDesc"></textarea>
     </div>
     <div class="form-group">
-        <label for="wiStatus">Status</label> <select id="wiStatus" class="form-control">
+        <label for="wiStatus">Status</label> 
+        <select id="wiStatus" class="form-control">
 			<option value='0'>To do</option>
 			<option value='1'>In progress</option>
 			<option value='2'>Done</option>
