--- a/WebContent/resources/index.html
+++ b/WebContent/resources/index.html
@@ -3,29 +3,30 @@
 
 <head>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="">
+<meta name="author" content="">
 
-    <title>Task</title>
+<title>Task</title>
 
-    <!-- Bootstrap Core CSS -->
-    <link href="../login/css/bootstrap.min.css" rel="stylesheet">
+<!-- Bootstrap Core CSS -->
+<link href="../login/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom CSS -->
-    <link href="css/sb-admin.css" rel="stylesheet">
-    <link href="css/dataTables.min.css" rel="stylesheet">
-    <link href="css/index.css" rel="stylesheet">
-    <link href="../login/css/toastr.min.css" rel="stylesheet">
+<!-- Custom CSS -->
+<link href="css/sb-admin.css" rel="stylesheet">
+<link href="css/dataTables.min.css" rel="stylesheet">
+<link href="css/index.css" rel="stylesheet">
+<link href="../login/css/toastr.min.css" rel="stylesheet">
 
-    <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+<!-- Custom Fonts -->
+<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet"
+	type="text/css">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
+<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+<!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
@@ -34,129 +35,131 @@
 
 <body>
 
-    <div id="wrapper">
+	<div id="wrapper">
 
-        <!-- Navigation -->
-        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+		<!-- Navigation -->
+		<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+			<!-- Brand and toggle get grouped for better mobile display -->
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse"
+					data-target=".navbar-ex1-collapse">
 					<span class="sr-only">Toggle navigation</span> <span
 						class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-                <a class="navbar-brand" href="index.html">Task</a>
-            </div>
-            <!-- Top Menu Items -->
-            <ul class="nav navbar-right top-nav">
-                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i><span
+				<a class="navbar-brand" href="index.html">Task</a>
+			</div>
+			<!-- Top Menu Items -->
+			<ul class="nav navbar-right top-nav">
+				<li class="dropdown"><a href="#" class="dropdown-toggle"
+					data-toggle="dropdown"><i class="fa fa-user"></i><span
 						id="emailUser"> Not Logged</span> <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li class="divider"></li>
-                        <li><a href="../LogOut"><i class="fa fa-fw fa-power-off"></i>
+					<ul class="dropdown-menu">
+						<li class="divider"></li>
+						<li><a href="../LogOut"><i class="fa fa-fw fa-power-off"></i>
 								Log Out</a></li>
-                    </ul>
-                </li>
-            </ul>
-            <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
-            <div class="collapse navbar-collapse navbar-ex1-collapse">
-                <ul class="nav navbar-nav side-nav">
-                    <li><a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-arrows-v"></i>
-							Dropdown <i class="fa fa-fw fa-caret-down"></i></a>
-                        <ul id="demo" class="collapse">
-                            <li><a href="#">Dropdown Item</a></li>
-                            <li><a href="#">Dropdown Item</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="blank-page.html"><i class="fa fa-fw fa-file"></i>
-							Blank Page</a></li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </nav>
+					</ul></li>
+			</ul>
+			<!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
+			<div class="collapse navbar-collapse navbar-ex1-collapse">
+				<ul class="nav navbar-nav side-nav">
+					<li id="newWI" data-toggle='modal' data-target='#Modal'><a><i
+							class="fa fa-plus-square-o fa-lg"></i> New work item</a></li>
+					<li><a href="javascript:;" data-toggle="collapse"
+						data-target="#demo"><i class="fa fa-fw fa-arrows-v"></i> View
+							Work items <i class="fa fa-fw fa-caret-down"></i></a>
+						<ul id="demo" class="collapse">
+							<li id="allWI"><a><i class="fa fa-globe fa-lg"></i> 
+									All work itens</a></li>
+							<li ><a><i class="fa fa-user fa-lg"></i>Only mine</a></li>
+						</ul></li>
 
-        <div id="page-wrapper">
+				</ul>
+			</div>
+			<!-- /.navbar-collapse -->
+		</nav>
 
-            <div class="container-fluid">
+		<div id="page-wrapper">
 
-                <!-- Page Heading -->
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div id="pageContainer">
-                            <h1 class="page-header">
-								Work Itens 
-								<small><button type="button"
-										data-toggle='modal' data-target='#Modal'
-										class="btn btn-primary" id="newWI">New</button></small>
-								<select id="wiFilter" class="form-control">
-									<option value="33">To do</option>
+			<div class="container-fluid">
+
+				<!-- Page Heading -->
+				<div class="row">
+					<div class="col-lg-12">
+						<div id="pageContainer">
+							<h1 class="page-header">
+								Work Itens <select id="wiFilter" class="form-control">
+									<option value="0">To do</option>
 									<option value="1">In progress</option>
 									<option value="2">Done</option>
 									<option value="3">Stopped</option>
+									<option value="4">All</option>
 								</select>
 							</h1>
-                            <div class="table-responsive">
-                                <table id="dataTable" class="display table">
-                                    <thead>
-                                        <tr>
-                                            <th>#</th>
-                                            <th>User</th>
-                                            <th>Name</th>
-                                            <th>Estimated effort</th>
-                                            <th>Description</th>
-                                            <th>Status</th>
-                                            <th>Effort</th>
-                                            <th>Deviation</th>
-                                            <th>More</th>
-                                        </tr>
-                                    </thead>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- /.row -->
+							<div class="table-responsive">
+								<table id="dataTable" class="display table">
+									<thead>
+										<tr>
+											<th>#</th>
+											<th>User</th>
+											<th>Name</th>
+											<th>Estimated effort</th>
+											<th>Description</th>
+											<th>Status</th>
+											<th>Effort</th>
+											<th>Deviation</th>
+											<th>More</th>
+										</tr>
+									</thead>
+								</table>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- /.row -->
 
-            </div>
-            <!-- /.container-fluid -->
+			</div>
+			<!-- /.container-fluid -->
 
-        </div>
-        <!-- /#page-wrapper -->
+		</div>
+		<!-- /#page-wrapper -->
 
-    </div>
-    <!-- /#wrapper -->
+	</div>
+	<!-- /#wrapper -->
 
-    <!-- jQuery -->
-    <script src="../login/js/jquery.js"></script>
+	<!-- jQuery -->
+	<script src="../login/js/jquery.js"></script>
 
-    <!-- DataTable -->
-    <script src="js/dataTables.min.js"></script>
-    <script src="js/dataTables.buttons.min.js"></script>
-    <script src="js/dataTables.select.min.js"></script>
+	<!-- DataTable -->
+	<script src="js/dataTables.min.js"></script>
+	<script src="js/dataTables.buttons.min.js"></script>
+	<script src="js/dataTables.select.min.js"></script>
 
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="../login/js/bootstrap.min.js"></script>
+	<!-- Bootstrap Core JavaScript -->
+	<script src="../login/js/bootstrap.min.js"></script>
 
-    <!-- Page js -->
-    <script src="../login/js/ajax.js"></script>
-    <script src="js/index.js"></script>
-    <script src="../login/js/toastr.min.js"></script>
+	<!-- Page js -->
+	<script src="../login/js/ajax.js"></script>
+	<script src="js/index.js"></script>
+	<script src="../login/js/toastr.min.js"></script>
 
-    <!-- Modal -->
-    <div class="modal fade" id="Modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+	<!-- Modal -->
+	<div class="modal fade" id="Modal" tabindex="-1" role="dialog"
+		aria-labelledby="myModalLabel">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal"
+						aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
-                    <h4 class="modal-title"></h4>
-                </div>
-                <div class="modal-body"></div>
-            </div>
-        </div>
-    </div>
+					<h4 class="modal-title"></h4>
+				</div>
+				<div class="modal-body"></div>
+			</div>
+		</div>
+	</div>
 </body>
 
 </html>
