--- a/WebContent/resources/wi/index.html
+++ b/WebContent/resources/wi/index.html
@@ -27,7 +27,7 @@
         <label for="effort">Effort</label> <input type="time" class="form-control" id="effort" placeholder="In hours" disabled="disabled">
     </div>
     <div class="form-group">
-        <label for="dPercentage">Deviation</label> <input type="time" class="form-control" id="dPercentage" placeholder="In hours" disabled="disabled">
+        <label for="dPercentage">Deviation Percentage</label> <input type="text" class="form-control" id="dPercentage" placeholder="In hours" disabled="disabled">
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
