--- a/WebContent/resources/index.html
+++ b/WebContent/resources/index.html
@@ -71,7 +71,7 @@
 						<ul id="demo" class="collapse">
 							<li id="allWI"><a><i class="fa fa-globe fa-lg"></i> 
 									All work itens</a></li>
-							<li ><a><i class="fa fa-user fa-lg"></i>Only mine</a></li>
+							<li id="aTM"><a><i class="fa fa-user fa-lg"></i>Assigned to me</a></li>
 						</ul></li>
 
 				</ul>
@@ -101,7 +101,7 @@
 									<thead>
 										<tr>
 											<th>#</th>
-											<th>User</th>
+											<th>Assigned to</th>
 											<th>Name</th>
 											<th>Estimated effort</th>
 											<th>Description</th>
