--- a/WebContent/resources/wi/index.html
+++ b/WebContent/resources/wi/index.html
@@ -1,7 +1,7 @@
 <form id="newWIForm">
     <div class="form-group">
         <input type="hidden" id="id">
-        <label for="selectUser">User</label>
+        <label for="selectUser">Assigned to</label>
         <div id="selectUsers"></div>
     </div>
     <div class="form-group">
