--- a/WebContent/resources/index.html
+++ b/WebContent/resources/index.html
@@ -65,14 +65,14 @@
 				<ul class="nav navbar-nav side-nav">
 					<li id="newWI" data-toggle='modal' data-target='#Modal'><a><i
 							class="fa fa-plus-square-o fa-lg"></i> New work item</a></li>
-					<li><a href="javascript:;" data-toggle="collapse"
+					<!--<li><a href="javascript:;" data-toggle="collapse"
 						data-target="#demo"><i class="fa fa-fw fa-arrows-v"></i> View
 							Work items <i class="fa fa-fw fa-caret-down"></i></a>
 						<ul id="demo" class="collapse">
 							<li id="allWI"><a><i class="fa fa-globe fa-lg"></i> 
 									All work itens</a></li>
-							<li id="aTM"><a><i class="fa fa-user fa-lg"></i>Assigned to me</a></li>
-						</ul></li>
+							<li><a href="index.html"><i class="fa fa-user fa-lg"></i>Assigned to me</a></li>
+						</ul></li>  -->
 
 				</ul>
 			</div>
@@ -107,7 +107,7 @@
 											<th>Description</th>
 											<th>Status</th>
 											<th>Effort</th>
-											<th>Deviation</th>
+											<th>Used time</th>
 											<th>More</th>
 										</tr>
 									</thead>
